# KalaVideo

./: .gitignore  CMakeLists.txt  LIBRARIES.md  LICENSE.md  Linux_prerequisites.txt  README.md  build_all_linux.sh  build_all_windows.bat
_external_shared/: copy_linux.sh  copy_windows.bat
_external_shared/KalaWindow/: README.md  enums.hpp  input.hpp  messageloop.hpp  opengl.hpp  opengl_loader.hpp  opengl_typedefs.hpp  platform.hpp  shader.hpp  window.hpp
_external_shared/KalaWindow/debug/: KalaWindowD.lib
_external_shared/KalaWindow/release/: KalaWindow.lib
include/core/: core.hpp
include/graphics/: triangle.hpp
src/: main.cpp
src/core/: core.cpp
src/graphics/: triangle.cpp
